--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header">
 
             <ul class="nav">
-                <li><a href="https://phansinhnd.github.io/myband/">Home</a></li>
+                <li><a href="https://phansinhnd.github.io/myBand/">Home</a></li>
                 <li><a href="#band">Band</a></li>
                 <li><a href="#tour">Tour</a></li>
                 <li><a href="#contact">Contact</a></li>
